# SortFilterProxyModel

./: .gitignore  CMakeLists.txt  README.md  SortFilterProxyModel.pri  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h
filters/: filtersqmltypes.cpp  rangefilter.cpp  regexpfilter.h  regularexpressionfilter.cpp  regularexpressionfilter.h
proxyroles/: proxyrolecontainer.cpp
sorters/: rolesorter.cpp
